fixed overflow from forms

--- a/src/Login/login.css
+++ b/src/Login/login.css
@@ -1,5 +1,7 @@
 #loginForm {
   position: absolute;
+  height: 350px;
+  width: 300px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -9,7 +11,18 @@
   justify-content: center;
   align-items: center;
   border: 1px black solid;
+  overflow-y: hidden;
 }
+
 #loginForm > form > * {
-  margin: 10px;
+  margin-bottom: 3%;
+  margin-top: 3%;
+}
+.txtInput, label, p{
+  height: 10%;
+  width: 100%;
+}
+#loginBtn{
+  height: 13%;
+  width: 30%;
 }
